# vscode-ng-language-service

./: .gitignore  BUILD.bazel  CHANGELOG.md  DEVELOPER.md  README.md  WORKSPACE  esbuild.js  package.json  pnpm-lock.yaml  transform_package_json.js
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
client/src/: client.ts  embedded_support.ts
common/: BUILD.bazel  requests.ts
integration/: BUILD.bazel
override_rename_ts_plugin/: index.js  package.json
patches/: minipass-flush.patch  minipass-pipeline.patch  minipass-sized.patch
scripts/: baseParse.js
server/: BUILD.bazel  package.json  tsconfig.json
server/src/: BUILD.bazel  cmdline_utils.ts  completion.ts  diagnostic.ts  server.ts  server_host.ts  session.ts  utils.ts  version_provider.ts
server/src/tests/: utils_spec.ts  version_provider_spec.ts
server/src/utils/: scriptInfo.ts  textDocument.ts  translation.ts  utils.ts
v12_language_service/: baseParse.js  package.json
