load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//js/private:expand_template.bzl", "expand_template")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vsce/package_json.bzl", vsce_bin = "bin")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//syntaxes/test:__pkg__"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

expand_template(
    name = "package_json_expanded",
    out = "package_expanded.json",
    stamp_substitutions = {
        "0.0.0-PLACEHOLDER": "{{BUILD_SCM_VERSION}}",
    },
    substitutions = {
        "./bazel-bin/client/src/extension": "./index",
    },
    template = "package.json",
)

npm_package(
    name = "vsix_sandbox",
    # Transitive closure of npm deps needed for vsce; this set was determined manually by
    # running `bazel build //:vsix` and burning down missing packages. We do this so that we
    # don't have to run an additional `npm install` action to create a node_modules within the
    # //:npm npm_package where the vsce build takes place.
    srcs = [
        "//client:index.js",
        "//server:npm_files",
        "//syntaxes:npm_files",
        ":node_modules/proc-log",
        ":node_modules/node-gyp-build",
        ":node_modules/read-binary-file-arch",
        ":node_modules/es-define-property",
        ":node_modules/es6-promise",
        ":node_modules/ms",
        ":node_modules/promise-retry",
        ":node_modules/@npmcli/agent",
        ":node_modules/es-errors",
        ":node_modules/function-bind",
        ":node_modules/call-bind",
        ":node_modules/undici-types",
        ":node_modules/package-json-from-dist",
        ":node_modules/@bazel/bazelisk",
        ":node_modules/@bazel/ibazel",
        ":node_modules/@electron/rebuild",
        ":node_modules/@isaacs/cliui",
        ":node_modules/@malept/cross-spawn-promise",
        ":node_modules/@sindresorhus/is",
        ":node_modules/@szmarczak/http-timer",
        ":node_modules/@tootallnate/once",
        ":node_modules/@types/cacheable-request",
        ":node_modules/@types/http-cache-semantics",
        ":node_modules/@types/jasmine",
        ":node_modules/@types/keyv",
        ":node_modules/@types/node",
        ":node_modules/@types/responselike",
        ":node_modules/@types/vscode",
        ":node_modules/abbrev",
        ":node_modules/agent-base",
        ":node_modules/agentkeepalive",
        # ":node_modules/cacache",
        ":node_modules/make-fetch-happen/node_modules/cacache",
        ":node_modules/make-fetch-happen/node_modules/lru-cache",
        # ":node_modules/make-fetch-happen/node_modules/fs-minipass",
        ":node_modules/make-fetch-happen/node_modules/minipass",
        ":node_modules/make-fetch-happen/node_modules/minimatch",
        ":node_modules/minimatch",
        ":node_modules/minipass",
        ":node_modules/fs-minipass",
        ":node_modules/node-gyp/node_modules/cacache",
        ":node_modules/node-gyp/node_modules/fs-minipass",
        ":node_modules/node-gyp/node_modules/minipass",
        ":node_modules/node-gyp/node_modules/minimatch",
        ":node_modules/node-gyp/node_modules/lru-cache",
        ":node_modules/node-gyp/node_modules/@npmcli/fs",
        ":node_modules/node-gyp/node_modules/unique-filename",
        ":node_modules/node-gyp/node_modules/unique-slug",
        ":node_modules/node-gyp/node_modules/semver",
        ":node_modules/node-gyp/node_modules/ssri",
        ":node_modules/@electron/rebuild/node_modules/semver",
        # ":node_modules/ssri",
        ":node_modules/aggregate-error",
        ":node_modules/ansi-styles",
        ":node_modules/aproba",
        ":node_modules/ip-address",
        ":node_modules/are-we-there-yet",
        ":node_modules/balanced-match",
        ":node_modules/base64-js",
        ":node_modules/bl",
        ":node_modules/brace-expansion",
        ":node_modules/buffer",
        ":node_modules/cacheable-lookup",
        ":node_modules/cacheable-request",
        ":node_modules/chalk",
        ":node_modules/character-parser",
        # ":node_modules/chownr",
        ":node_modules/clang-format",
        ":node_modules/clean-stack",
        ":node_modules/cli-cursor",
        ":node_modules/cli-spinners",
        ":node_modules/clone",
        ":node_modules/clone-response",
        ":node_modules/color-support",
        ":node_modules/concat-map",
        ":node_modules/console-control-strings",
        ":node_modules/core-util-is",
        ":node_modules/cross-env",
        ":node_modules/cross-spawn",
        ":node_modules/debug",
        ":node_modules/decompress-response",
        ":node_modules/deep-extend",
        ":node_modules/defaults",
        ":node_modules/defer-to-connect",
        ":node_modules/define-data-property",
        ":node_modules/delegates",
        ":node_modules/detect-libc",
        ":node_modules/eastasianwidth",
        ":node_modules/emoji-regex",
        ":node_modules/end-of-stream",
        ":node_modules/env-paths",
        ":node_modules/err-code",
        ":node_modules/es6-promisify",
        ":node_modules/esbuild",
        ":node_modules/escalade",
        # ":node_modules/expand-template",
        ":node_modules/exponential-backoff",
        ":node_modules/foreground-child",
        ":node_modules/fs-constants",
        ":node_modules/fs-extra",
        # ":node_modules/fs-minipass",
        ":node_modules/fs.realpath",
        ":node_modules/gauge",
        ":node_modules/get-caller-file",
        ":node_modules/get-intrinsic",
        # ":node_modules/github-from-package",
        ":node_modules/glob",
        ":node_modules/gopd",
        ":node_modules/got",
        ":node_modules/graceful-fs",
        ":node_modules/has-flag",
        ":node_modules/has-property-descriptors",
        ":node_modules/has-proto",
        ":node_modules/has-symbols",
        ":node_modules/has-tostringtag",
        ":node_modules/has-unicode",
        ":node_modules/hasown",
        ":node_modules/http-cache-semantics",
        ":node_modules/http-proxy-agent",
        ":node_modules/http2-wrapper",
        ":node_modules/https-proxy-agent",
        ":node_modules/humanize-ms",
        ":node_modules/ieee754",
        ":node_modules/imurmurhash",
        ":node_modules/indent-string",
        ":node_modules/inflight",
        ":node_modules/inherits",
        ":node_modules/ini",
        ":node_modules/ip",
        ":node_modules/is-expression",
        ":node_modules/is-fullwidth-code-point",
        ":node_modules/is-interactive",
        ":node_modules/is-lambda",
        ":node_modules/is-regex",
        ":node_modules/is-unicode-supported",
        ":node_modules/isexe",
        ":node_modules/jackspeak",
        ":node_modules/jasmine",
        ":node_modules/json-buffer",
        ":node_modules/jsonfile",
        ":node_modules/keyv",
        ":node_modules/log-symbols",
        ":node_modules/lowercase-keys",
        # ":node_modules/semver/node_modules/lru-cache",
        ":node_modules/node-gyp/node_modules/make-fetch-happen",
        ":node_modules/make-fetch-happen",
        ":node_modules/mimic-fn",
        ":node_modules/mimic-response",
        # ":node_modules/minimatch",
        ":node_modules/minimist",
        # ":node_modules/minipass",
        ":node_modules/minipass-collect",
        ":node_modules/minipass-fetch",
        ":node_modules/minipass-flush",
        ":node_modules/minipass-pipeline",
        ":node_modules/minipass-sized",
        ":node_modules/minizlib",
        ":node_modules/mkdirp",
        # ":node_modules/mkdirp-classic",
        # ":node_modules/nan",
        # ":node_modules/napi-build-utils",
        ":node_modules/negotiator",
        ":node_modules/node-abi",
        ":node_modules/node-api-version",
        ":node_modules/node-gyp",
        ":node_modules/nopt",
        ":node_modules/normalize-url",
        ":node_modules/npmlog",
        ":node_modules/npx",
        ":node_modules/object-assign",
        ":node_modules/once",
        ":node_modules/onetime",
        ":node_modules/ora",
        ":node_modules/p-cancelable",
        ":node_modules/p-map",
        ":node_modules/path-is-absolute",
        ":node_modules/path-key",
        ":node_modules/path-scurry",
        # ":node_modules/prebuild-install",
        ":node_modules/prettier",
        ":node_modules/process-nextick-args",
        ":node_modules/pug-error",
        ":node_modules/pug-lexer",
        ":node_modules/pug-parser",
        ":node_modules/pug_html_locator_js",
        ":node_modules/pugjs-angular-language-service",
        ":node_modules/pump",
        ":node_modules/quick-lru",
        ":node_modules/rc",
        ":node_modules/readable-stream",
        ":node_modules/require-directory",
        ":node_modules/resolve-alpn",
        ":node_modules/responselike",
        ":node_modules/restore-cursor",
        ":node_modules/rimraf",
        ":node_modules/rxjs",
        ":node_modules/safe-buffer",
        ":node_modules/vscode-languageclient/node_modules/semver",
        ":node_modules/set-blocking",
        ":node_modules/set-function-length",
        ":node_modules/shebang-regex",
        ":node_modules/signal-exit",
        # ":node_modules/simple-concat",
        # ":node_modules/simple-get",
        ":node_modules/smart-buffer",
        ":node_modules/socks",
        ":node_modules/socks-proxy-agent",
        ":node_modules/string-width",
        ":node_modules/string-width-cjs",
        ":node_modules/string_decoder",
        ":node_modules/strip-ansi",
        ":node_modules/strip-ansi-cjs",
        ":node_modules/tar",
        ":node_modules/token-stream",
        ":node_modules/tree-sitter",
        ":node_modules/tree-sitter-pug",
        ":node_modules/ts-node",
        ":node_modules/tslint",
        ":node_modules/tslint-eslint-rules",
        ":node_modules/tunnel-agent",
        ":node_modules/typescript",
        ":node_modules/universalify",
        ":node_modules/util-deprecate",
        ":node_modules/vsce",
        ":node_modules/vscode-html-languageservice",
        ":node_modules/vscode-jsonrpc",
        ":node_modules/vscode-languageclient",
        ":node_modules/vscode-languageserver",
        ":node_modules/vscode-languageserver-protocol",
        ":node_modules/vscode-languageserver-textdocument",
        ":node_modules/vscode-languageserver-types",
        ":node_modules/vscode-nls",
        ":node_modules/vscode-test",
        ":node_modules/vscode-tmgrammar-test",
        ":node_modules/vscode-uri",
        ":node_modules/wcwidth",
        ":node_modules/which",
        ":node_modules/wide-align",
        ":node_modules/wrap-ansi",
        ":node_modules/wrap-ansi-cjs",
        ":node_modules/wrappy",
        ":node_modules/yallist",
        ":node_modules/yargs",
        "CHANGELOG.md",
        "README.md",
        "angular.png",
        "package_expanded.json",
    ],
    exclude_srcs_patterns = [
        "*.map",
        "**/*.map",
    ],
    include_srcs_packages = [
        "**",
    ],
    replace_prefixes = {
        "package_expanded.json": "package.json",
        "server/package_expanded.json": "server/package.json",
        "client/": "",
        "syntaxes/src/": "syntaxes/",
    },
)

vsce_bin.vsce(
    name = "vsix",
    srcs = [
        ":vsix_sandbox",
    ],
    outs = ["ng-template.vsix"],
    args = [
        "package",
        "-o",
        "../ng-template.vsix",
    ],
    chdir = "vsix_sandbox",
    # vsce requires npm on the PATH; we can get this from the Bazel rules_nodejs but it is not
    # included by default in rules_js binary rules so we include it here explicitly
    include_npm = True,
)

npm_package(
    name = "npm",
    srcs = [
        ":vsix",
        ":vsix_sandbox",
    ],
    root_paths = [
        "vsix_sandbox",
    ],
    visibility = ["//integration:__subpackages__"],
)
